// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`debts.remove > functionality > auto-accepted by counterparty > debt does not exist 1`] = `
{
  "deleted": {
    "debts": {
      "id:9ac5225a-77fd-4a24-aab8-47297743468e|ownerAccountId:56bae36c-0cfa-4100-b1d6-5efe427b3048": undefined,
    },
  },
}
`;

exports[`debts.remove > functionality > auto-accepted by counterparty > debt exists 1`] = `
{
  "deleted": {
    "debts": {
      "id:a6b4315f-09a6-42eb-8af7-02fd9117f580|ownerAccountId:3e46b9c3-3d53-441d-b4f2-8cfa063914d5": undefined,
      "id:a6b4315f-09a6-42eb-8af7-02fd9117f580|ownerAccountId:9d9adde3-1a01-4d09-bc04-92447f0ccc48": undefined,
    },
  },
}
`;

exports[`debts.remove > functionality > not auto-accepted by counterparty 1`] = `
{
  "deleted": {
    "debts": {
      "id:ecdfb1f0-7c98-461b-a826-1dd52f144ec0|ownerAccountId:f04752bd-4d20-4189-9652-34eabba08a46": undefined,
    },
  },
}
`;
